# repo-to-text

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker.yml
